@@ -128,5 +128,22 @@ typedef	@GS_ADDR@ gsaddr;
 #define GS_HAVE_I64	@GS_HAVE_I64@
 #define GS_HAVE_I128	@GS_HAVE_I128@
 
+/*
+ * Macros to deal with hiding an object from the garbage collector
+ * This macro employs the procesor-dependent knowledge that a pointer to an
+ * object will always be on an even address boundary.  If we ever port to a
+ * system where this is not the case, we will have to find another mechanism.
+ */
+#ifndef	GS_WITH_GC
+#define	GS_WITH_GC	0
+#endif
+#if	GS_WITH_GC
+#define	GS_GC_HIDE(obj)		((id)(((gsaddr)obj) | 1))
+#define	GS_GC_UNHIDE(obj)	((id)(((gsaddr)obj) & ~1))
+#else
+#define	GS_GC_HIDE(obj)		((id)obj)
+#define	GS_GC_UNHIDE(obj)	((id)obj)
+#endif
+
 #endif	/* included_GSConfig_h */
 
