@@ -1,9 +1,10 @@
 /* GNUStep callback functions prototypes.
- * Copyright (C) 1996  Free Software Foundation, Inc.
+ * Copyright(C) 1996  Free Software Foundation, Inc.
  * 
  * Author: Albin L. Jones <Albin.L.Jones@Dartmouth.EDU>
  * Created: Tue Feb 13 23:10:29 EST 1996
  * Updated: Tue Feb 13 23:10:29 EST 1996
+ * Updated: Mon Feb  7 10:25:00 GMT 2000
  * Serial: 96.02.13.01
  * 
  * This file is part of the GNUstep Base Library.
@@ -11,7 +12,7 @@
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
+ * version 2 of the License, or(at your option) any later version.
  * 
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -36,47 +37,47 @@
 
 /** For `int's **/
 
-unsigned int _NS_int_hash (void *table, int i);
-BOOL _NS_int_is_equal (void *table, int i, int j);
-void _NS_int_retain (void *table, int i);
-void _NS_int_release (void *table, int i);
-NSString *_NS_int_describe (void *table, int i);
+unsigned int _NS_int_hash(void *table, int i);
+BOOL _NS_int_is_equal(void *table, int i, int j);
+void _NS_int_retain(void *table, int i);
+void _NS_int_release(void *table, int i);
+NSString *_NS_int_describe(void *table, int i);
 
 /** For owned `void *' **/
 
-unsigned int _NS_owned_void_p_hash (void *table, void *p);
-BOOL _NS_owned_void_p_is_equal (void *table, void *p, void *q);
-void _NS_owned_void_p_retain (void *table, void *p);
-void _NS_owned_void_p_release (void *table, void *p);
-NSString *_NS_owned_void_p_describe (void *table, void *p);
+unsigned int _NS_owned_void_p_hash(void *table, void *p);
+BOOL _NS_owned_void_p_is_equal(void *table, void *p, void *q);
+void _NS_owned_void_p_retain(void *table, void *p);
+void _NS_owned_void_p_release(void *table, void *p);
+NSString *_NS_owned_void_p_describe(void *table, void *p);
 
 /** For non-retained Objective-C objects **/
-unsigned int _NS_non_retained_id_hash (void *table, id <NSObject> o);
-BOOL _NS_non_retained_id_is_equal (void *table, id <NSObject> o, id <NSObject> p);
-void _NS_non_retained_id_retain (void *table, id <NSObject> o);
-void _NS_non_retained_id_release (void *table, id <NSObject> o);
-NSString *_NS_non_retained_id_describe (void *table, id <NSObject> o);
+unsigned int _NS_non_retained_id_hash(void *table, id <NSObject> o);
+BOOL _NS_non_retained_id_is_equal(void *table, id <NSObject> o, id <NSObject> p);
+void _NS_non_retained_id_retain(void *table, id <NSObject> o);
+void _NS_non_retained_id_release(void *table, id <NSObject> o);
+NSString *_NS_non_retained_id_describe(void *table, id <NSObject> o);
 
-/** For (retainable) objects **/
-unsigned int _NS_id_hash (void *table, id <NSObject> o);
-BOOL _NS_id_is_equal (void *table, id <NSObject> o, id <NSObject> p);
-void _NS_id_retain (void *table, id <NSObject> o);
-void _NS_id_release (void *table, id <NSObject> o);
-NSString *_NS_id_describe (void *table, id <NSObject> o);
+/** For(retainable) objects **/
+unsigned int _NS_id_hash(void *table, id <NSObject> o);
+BOOL _NS_id_is_equal(void *table, id <NSObject> o, id <NSObject> p);
+void _NS_id_retain(void *table, id <NSObject> o);
+void _NS_id_release(void *table, id <NSObject> o);
+NSString *_NS_id_describe(void *table, id <NSObject> o);
 
-/** For (non-owned) `void *' **/
-unsigned int _NS_non_owned_void_p_hash (void *table, void *p);
-BOOL _NS_non_owned_void_p_is_equal (void *table, void *p, void *q);
-void _NS_non_owned_void_p_retain (void *table, void *p);
-void _NS_non_owned_void_p_release (void *table, void *p);
-NSString *_NS_non_owned_void_p_describe (void *table, void *p);
+/** For(non-owned) `void *' **/
+unsigned int _NS_non_owned_void_p_hash(void *table, void *p);
+BOOL _NS_non_owned_void_p_is_equal(void *table, void *p, void *q);
+void _NS_non_owned_void_p_retain(void *table, void *p);
+void _NS_non_owned_void_p_release(void *table, void *p);
+NSString *_NS_non_owned_void_p_describe(void *table, void *p);
 
 /** For pointers to structures and `int *' **/
-unsigned int _NS_int_p_hash (void *table, int *p);
-BOOL _NS_int_p_is_equal (void *table, int *p, int *q);
-void _NS_int_p_retain (void *table, int *p);
-void _NS_int_p_release (void *table, int *p);
-NSString *_NS_int_p_describe (void *table, int *p);
+unsigned int _NS_int_p_hash(void *table, int *p);
+BOOL _NS_int_p_is_equal(void *table, int *p, int *q);
+void _NS_int_p_retain(void *table, int *p);
+void _NS_int_p_release(void *table, int *p);
+NSString *_NS_int_p_describe(void *table, int *p);
 
 #endif /* __NSCallBacks_h_OBJECTS_INCLUDE **/
 
