@@ -1,9 +1,10 @@
 /* GNUStep callback functions.  Implicitly required by the standard.
- * Copyright (C) 1996  Free Software Foundation, Inc.
+ * Copyright(C) 1996  Free Software Foundation, Inc.
  * 
  * Author: Albin L. Jones <Albin.L.Jones@Dartmouth.EDU>
  * Created: Tue Feb 13 23:10:29 EST 1996
  * Updated: Wed Mar 20 19:53:48 EST 1996
+ * Updated: Mon Feb  7 10:25:00 GMT 2000
  * Serial: 96.03.20.02
  * 
  * This file is part of the GNUstep Base Library.
@@ -11,7 +12,7 @@
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
+ * version 2 of the License, or(at your option) any later version.
  * 
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -36,58 +37,58 @@
 /** For `int's **/
 
 unsigned int
-_NS_int_hash (void *table, int i)
+_NS_int_hash(void *table, int i)
 {
   return (unsigned int) i;
 }
 
 BOOL
-_NS_int_is_equal (void *table, int i, int j)
+_NS_int_is_equal(void *table, int i, int j)
 {
   return (i == j) ? YES : NO;
 }
 
 void
-_NS_int_retain (void *table, int i)
+_NS_int_retain(void *table, int i)
 {
   return;
 }
 
 void
-_NS_int_release (void *table, int i)
+_NS_int_release(void *table, int i)
 {
   return;
 }
 
 NSString *
-_NS_int_describe (void *table, int i)
+_NS_int_describe(void *table, int i)
 {
-  return [NSString stringWithFormat:@"%d", i];
+  return [NSString stringWithFormat: @"%d", i];
 }
 
 /** For owned `void *' **/
 
 unsigned int
-_NS_owned_void_p_hash (void *table, void *p)
+_NS_owned_void_p_hash(void *table, void *p)
 {
   /* P may be aligned, so we need to compensate. */
   return ((unsigned int)p)/4;
 }
 
 BOOL
-_NS_owned_void_p_is_equal (void *table, void *p, void *q)
+_NS_owned_void_p_is_equal(void *table, void *p, void *q)
 {
   return (p == q) ? YES : NO;
 }
 
 void
-_NS_owned_void_p_retain (void *table, void *p)
+_NS_owned_void_p_retain(void *table, void *p)
 {
   return;
 }
 
 void
-_NS_owned_void_p_release (void *table, void *p)
+_NS_owned_void_p_release(void *table, void *p)
 {
   if (p != 0)
     free(p);
@@ -95,139 +96,139 @@ _NS_owned_void_p_release (void *table, void *p)
 }
 
 NSString *
-_NS_owned_void_p_describe (void *table, void *p)
+_NS_owned_void_p_describe(void *table, void *p)
 {
-  return [NSString stringWithFormat:@"%#x", p];
+  return [NSString stringWithFormat: @"%#x", p];
 }
 
 /** For non-retained Objective-C objects **/
 
 unsigned int
-_NS_non_retained_id_hash (void *table, id <NSObject> o)
+_NS_non_retained_id_hash(void *table, id <NSObject> o)
 {
   return [o hash];
 }
 
 BOOL
-_NS_non_retained_id_is_equal (void *table, id <NSObject> o, id <NSObject> p)
+_NS_non_retained_id_is_equal(void *table, id <NSObject> o, id <NSObject> p)
 {
-  return [o isEqual:p];
+  return [o isEqual: p];
 }
 
 void
-_NS_non_retained_id_retain (void *table, id <NSObject> o)
+_NS_non_retained_id_retain(void *table, id <NSObject> o)
 {
   return;
 }
 
 void
-_NS_non_retained_id_release (void *table, id <NSObject> o)
+_NS_non_retained_id_release(void *table, id <NSObject> o)
 {
   return;
 }
 
 NSString *
-_NS_non_retained_id_describe (void *table, id <NSObject> o)
+_NS_non_retained_id_describe(void *table, id <NSObject> o)
 {
   return [o description];
 }
 
-/** For (retainable) objects **/
+/** For(retainable) objects **/
 
 unsigned int
-_NS_id_hash (void *table, id <NSObject> o)
+_NS_id_hash(void *table, id <NSObject> o)
 {
   return [o hash];
 }
 
 BOOL
-_NS_id_is_equal (void *table, id <NSObject> o, id <NSObject> p)
+_NS_id_is_equal(void *table, id <NSObject> o, id <NSObject> p)
 {
-  return [o isEqual:p];
+  return [o isEqual: p];
 }
 
 void
-_NS_id_retain (void *table, id <NSObject> o)
+_NS_id_retain(void *table, id <NSObject> o)
 {
   IF_NO_GC(RETAIN(o));
   return;
 }
 
 void
-_NS_id_release (void *table, id <NSObject> o)
+_NS_id_release(void *table, id <NSObject> o)
 {
   RELEASE(o);
   return;
 }
 
 NSString *
-_NS_id_describe (void *table, id <NSObject> o)
+_NS_id_describe(void *table, id <NSObject> o)
 {
   return [o description];
 }
 
 
-/** For (non-owned) `void *' **/
+/** For(non-owned) `void *' **/
 
 unsigned int
-_NS_non_owned_void_p_hash (void *table, void *p)
+_NS_non_owned_void_p_hash(void *table, void *p)
 {
   return ((unsigned int)p)/4;
 }
 
 BOOL
-_NS_non_owned_void_p_is_equal (void *table, void *p, void *q)
+_NS_non_owned_void_p_is_equal(void *table, void *p, void *q)
 {
   return (p == q) ? YES : NO;
 }
 
 void
-_NS_non_owned_void_p_retain (void *table, void *p)
+_NS_non_owned_void_p_retain(void *table, void *p)
 {
   return;
 }
 
 void
-_NS_non_owned_void_p_release (void *table, void *p)
+_NS_non_owned_void_p_release(void *table, void *p)
 {
   return;
 }
 
 NSString *
-_NS_non_owned_void_p_describe (void *table, void *p)
+_NS_non_owned_void_p_describe(void *table, void *p)
 {
-  return [NSString stringWithFormat:@"%0x", p];
+  return [NSString stringWithFormat: @"%0x", p];
 }
 
 /** For pointers to structures and `int *' **/
 
 unsigned int
-_NS_int_p_hash (void *table, int *p)
+_NS_int_p_hash(void *table, int *p)
 {
   return ((unsigned int)p)/4;
 }
 
 BOOL
-_NS_int_p_is_equal (void *table, int *p, int *q)
+_NS_int_p_is_equal(void *table, int *p, int *q)
 {
   return (p == q) ? YES : NO;
 }
 
 void
-_NS_int_p_retain (void *table, int *p)
+_NS_int_p_retain(void *table, int *p)
 {
   return;
 }
 
 void
-_NS_int_p_release (void *table, int *p)
+_NS_int_p_release(void *table, int *p)
 {
   return;
 }
 
 NSString *
-_NS_int_p_describe (void *table, int *p)
+_NS_int_p_describe(void *table, int *p)
 {
   /* Is this useful? */
-  return [NSString stringWithFormat:@"%d (%#x)", *p, p];
+  return [NSString stringWithFormat: @"%d(%#x)", *p, p];
 }
